--- a/Aural Voice/resources/PianoAudio.resx
+++ b/Aural Voice/resources/PianoAudio.resx
@@ -122,6 +122,6 @@
     <value>audio\C5.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="test" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>audio\test.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>test.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
