--- a/Aural Voice/ProjectResources.resx
+++ b/Aural Voice/ProjectResources.resx
@@ -121,11 +121,23 @@
   <data name="keys_layout" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\keys_layout.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="key_black_hover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\key_black_hover.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="key_black_idle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\key_black_idle.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="key_black_press" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\key_black_press.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="key_white_hover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\key_white_hover.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="key_white_idle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\key_white_idle.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="key_white_press" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\key_white_press.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="my_song" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\my_song.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
