--- a/Aural Voice/ProjectResources.resx
+++ b/Aural Voice/ProjectResources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="key_black_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\key_black_green.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="key_black_hover" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\key_black_hover.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -127,6 +130,12 @@
   <data name="key_black_press" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\key_black_press.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="key_black_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\key_black_red.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="key_white_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\key_white_green.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="key_white_hover" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\key_white_hover.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -135,5 +144,8 @@
   </data>
   <data name="key_white_press" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\key_white_press.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="key_white_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\key_white_red.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
