--- a/Aural Voice/ProjectResources.resx
+++ b/Aural Voice/ProjectResources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="key_black_disabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\key_black_disabled.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="key_black_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\key_black_green.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -132,6 +135,9 @@
   </data>
   <data name="key_black_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\key_black_red.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="key_white_disabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\key_white_disabled.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="key_white_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\key_white_green.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
